# gh-actions-tests

./: README.md  codecov.yaml
.github/workflows/: main.yaml  main.yml  master.yaml
myapp/: CMakeLists.txt  package.xml
myapp/src/: myapp_main.cpp
myapp/test/: CMakeLists.txt  plugins_test.cpp
mylib/: CMakeLists.txt  mylib.xml  package.xml
mylib/include/mylib/: Utils.hpp
mylib/src/mylib/: Utils.cpp
mylib/test/: CMakeLists.txt  test_utils.cpp
mylib_base/: CMakeLists.txt  package.xml
mylib_base/include/mylib_base/: UtilsBase.hpp
